# GMatElastoPlastic

./: .ci_environment_docs.yaml  .travis.yml  CMakeLists.txt  Cartesian2d_8h.html  Cartesian2d_8h_source.html  Cartesian2d_8hpp.html  Cartesian2d_8hpp_source.html  Cartesian2d__Array_8hpp.html  Cartesian2d__Array_8hpp_source.html  Cartesian3d_8hpp.html  Cartesian3d_8hpp_source.html  Cartesian3d__Array_8hpp.html  Cartesian3d__Array_8hpp_source.html  GMatElastoPlastic.pc.in  GMatElastoPlasticConfig.cmake  GMatElastoPlasticConfig.cmake.in  README.md  annotated.html  annotated_dup.js  classGMatElastic_1_1Cartesian3d_1_1Elastic-members.html  classGMatElastic_1_1Cartesian3d_1_1Elastic.html  classGMatElastoPlastic_1_1Cartesian3d_1_1LinearHardening-members.html  classGMatElastoPlastic_1_1Cartesian3d_1_1LinearHardening.html  classGMatElastoPlastic_1_1Cartesian3d_1_1LinearHardening.js  classGMatTensor_1_1Cartesian2d_1_1Array-members.html  classGMatTensor_1_1Cartesian2d_1_1Array.html  classGMatTensor_1_1Cartesian3d_1_1Array-members.html  classGMatTensor_1_1Cartesian3d_1_1Array.html  classes.html  detail_8hpp.html  detail_8hpp_source.html  dir_83ba53aac98057360cceed2437b4ccf3.html  dir_83ba53aac98057360cceed2437b4ccf3.js  dir_a30c1e30e9db58567d664d3f1a80e9cc.html  dir_edb0aded7526a13df0aa15e11196f538.html  dir_edb0aded7526a13df0aa15e11196f538.js  environment.yaml  files.html  files_dup.js  functions.html  (+56 more)
.github/workflows/: ci.yml
docs/: api_cpp.rst  api_python.rst  conf.py  library.bib  readme.tex
docs/examples/: consistency.py  stress-strain.py
docs/theory/: goose-article.cls  library.bib  readme.tex
docs/theory/examples/: consistency.py  stress-strain.py
include/GMatElastoPlastic/: Cartesian3d.h  Cartesian3d.hpp  Cartesian3d_Array.hpp  Cartesian3d_Elastic.hpp  Cartesian3d_LinearHardening.hpp  Cartesian3d_Matrix.hpp  config.h  version.h  version.hpp
python/: main.cpp
python/GMatElastoPlastic/: Cartesian3d.py  __init__.py
search/: all_1.js  all_11.js  all_2.js  all_3.js  all_5.js  all_6.js  all_9.js  all_d.js  all_f.js  classes_2.js  defines_0.js  files_0.js  files_2.js  functions_10.js  functions_2.js  functions_3.js  functions_7.js  functions_9.js  functions_c.js  functions_d.js  functions_e.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js
test/: CMakeLists.txt  Cartesian3d.cpp  Cartesian3d.py
test/compare_versions/: Cartesian3d_check_v0.1.0.py
tests/: CMakeLists.txt  Cartesian3d.cpp  Cartesian3d.py  test_Cartesian3d.py  test_version.py
tests/compare_versions/: Cartesian3d_check_main.py  Cartesian3d_check_v0.1.0.py  Cartesian3d_generate.py
